--- a/data/configs/processing.yml
+++ b/data/configs/processing.yml
@@ -8,8 +8,8 @@ vars:
     description: "size of sketch; ex. 800,800"
   - name: "data_dir"
     ask: false
-    default: True
-    description: "should we create a datadir"
+    default: y
+    description: "should we create a datadir (y/n)"
   - name: "name"
     default: "default_sketch"
     ask: true
@@ -25,7 +25,7 @@ steps:
   - name: "data directory"
     directory: "{{name}}/data"
     type: "directory"
-    when: "{{ data_dir == True }}"
+    when: "{{ data_dir == 'y' }}"
   - name: "main sketch file"
     file: "{{name}}/{{name}}.pde"
     type: "template"
